--- a/showshow-master/package.json
+++ b/showshow-master/package.json
@@ -4,7 +4,7 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "name": "showshow",
-  "homepage": "https://taeyoon0620.github.io/showshow/",
+  "homepage": "https://taeyoon0620.github.io/showshow-master/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
